--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-redux-boilerplate",
   "version": "0.1.0",
-  "description": "React Redux using express",
+  "description": "",
   "main": "server/index.js",
   "scripts": {
     "start": "webpack && node server",
     "dev": "nodemon --watch server & webpack --watch"
   },
-  "author": "Julia",
+  "author": "WATL",
   "license": "ISC",
   "babel": {
     "presets": [
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "express": "^4.16.3",
+    "file-loader": "^1.1.11",
+    "lodash": "^4.17.10"
   }
 }
