--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "superagent": "^3.8.3"
   }
 }
