--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "lodash": "^4.17.10",
+    "react-sound": "^1.2.0",
     "superagent": "^3.8.3"
   }
 }
