--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^6.0.0",
+    "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.10",
     "react-sound": "^1.2.0",
     "superagent": "^3.8.3"
