--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.5"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "fs": "^0.0.1-security",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.15",
     "react-sound": "^1.2.0",
     "superagent": "^3.8.3"
   }
