--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fs": "^0.0.1-security",
     "lodash": "^4.17.15",
     "react-sound": "^1.2.0",
+    "redux-thunk": "^2.3.0",
     "superagent": "^3.8.3"
   }
 }
