--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-loader": "^1.1.11",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.15",
+    "react-router-dom": "^5.0.1",
     "react-sound": "^1.2.0",
     "redux-thunk": "^2.3.0",
     "superagent": "^3.8.3"
